--- a/css/universal.css
+++ b/css/universal.css
@@ -15,6 +15,7 @@
   position: relative;
   max-width: 2000px;
   height: 100vh;
+  height: 100svh;
   margin: 0 auto;
   display: flex;
   justify-content: center;
