--- a/css/responsive/blog.css
+++ b/css/responsive/blog.css
@@ -1,3 +1,8 @@
+@media screen and (max-width: 836px) {
+  #blog-card {
+    width: 90%;
+  }
+}
 @media screen and (max-width: 546px) {
   .nav-item-tooltip {
     top: 33px;
